tests/ui/suggestions/issue-117669.rs
fn main() {
    let abs: i32 = 3i32.checked_abs();
    //~^ ERROR mismatched types
}
